--- a/fraud_detection_common/pyproject.toml
+++ b/fraud_detection_common/pyproject.toml
@@ -1,14 +1,16 @@
 [project]
 name = "fraud_detection_common"
 version = "0.1.0"
-description = "Common utilities and models for fraud detection system"
+description = "Common utilities for fraud detection system"
 requires-python = ">=3.9"
 dependencies = [
-    "psycopg2-binary>=2.9.0",
-    "sqlalchemy>=1.4.0",
     "numpy>=1.21.0",
     "pandas>=1.3.0",
-    "scikit-learn>=1.0.0",  # For feature engineering and PCA
+    "psycopg2-binary>=2.9.0",
+    "sqlalchemy>=1.4.0",
+    "scikit-learn>=1.0.0",
+    "python-dotenv>=1.0.0",
+    "pydantic>=2.0.0"
 ]
 
 [build-system]
