--- a/fraud_detection_training/pyproject.toml
+++ b/fraud_detection_training/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "scikit-learn>=1.0.0",  # For feature engineering and PCA
 ]
 
+[project.scripts]
+generate-test-data = "fraud_detection_training.generate_test_data:main"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
