More refactoring to use dynamic schema based model and to run training and api module in docker.

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,8 @@ build/
 
 # Environment variables
 .env
-.env.local
+.env.*
+!.env.example
 
 # Logs
 *.log
@@ -39,3 +40,4 @@ build/
 Thumbs.db 
 
 fraud_detection_training/data/
+
