--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,60 @@
 version: '3.8'
+
 services:
-  app:
-    build: .
+  db:
+    image: ankane/pgvector:latest
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=fraud_detection
+    ports:
+      - "5432:5432"
+    networks:
+      - fraud_detection
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  training:
+    build:
+      context: .
+      dockerfile: fraud_detection_training/Dockerfile
+    environment:
+      - FRAUD_DETECTION_ENV=production
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/fraud_detection
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=fraud_detection
+    volumes:
+      - ./config:/app/config
+      - ./fraud_detection_training/data:/app/data
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - fraud_detection
+
+  api:
+    build:
+      context: .
+      dockerfile: fraud_detection_api/Dockerfile
+    environment:
+      - FRAUD_DETECTION_ENV=production
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/fraud_detection
     ports:
       - "8000:8000"
     depends_on:
+      - training
       - db
-    environment:
-      - DB_HOST=db
-      - DB_NAME=fraud_db
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - VECTOR_DIM=32
     volumes:
-      - .:/app
-    restart: always
+      - ./config:/app/config
+    networks:
+      - fraud_detection
 
-  db:
-    image: ankane/pgvector
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_DB=fraud_db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./sql/create_fraud_embeddings_table.sql:/docker-entrypoint-initdb.d/create_fraud_embeddings_table.sql
-
-volumes:
-  postgres_data:
+networks:
+  fraud_detection:
+    driver: bridge
